--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,13 @@
-[ng-cloak]{display: none}
+[ng-cloak],[frontload]{display: none}
+
+.blocker{
+	display: none;
+	position: fixed;
+	top: 100%;
+	width: 100%;
+	background-color: rgba(0,0,0,.4);
+}
+
+.table{
+	table-layout:fixed
+}
