--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+.container{
+	max-width: 970px;
+}
+
 [ng-cloak],[frontload]{display: none}
 
 *:first-child{
@@ -10,8 +14,4 @@
 	top: 100%;
 	width: 100%;
 	background-color: rgba(0,0,0,.4);
-}
-
-.table{
-	table-layout:fixed
 }
