--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body{background-color: #f3f3f3}
+body{background-color: #f3f3f3;color: #444;}
 .navbar{background-color: #1c2b36 !important;}
 .navbar-brand{color:white !important; font-weight: bold;}
 .pagination a{padding:4px 10px !important;font-size: 10px;}
