--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,4 +63,7 @@ form .table{
 	z-index:100000;
 }
 .modal-open .growl{right: 25px;}
-.growl-item{margin-bottom: 10px;}
+.growl-item{
+	margin-bottom: 10px;
+	box-shadow: 1px 2px 3px -2px rgba(0,0,0,.5);
+}
