--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
+*:first-child{margin-top: 0}
 body{background-color: #f3f3f3;color: #444;}
+table{width: 100%;vertical-align: top}
 label{font-weight: normal;font-size: 14px;display: block;}
+.text-muted{color:#aaa;}
 .hr-small{margin:5px 0;}
+.icons{float: right;font-size: 16px;}
+.icons *{margin-left: 5px}
+.isoform-messages{margin-top: 5px;font-size: 14px}
 .navbar{background-color: #1c2b36 !important;}
 .navbar-brand{color:white !important; font-weight: bold;}
 .pagination a{padding:4px 10px !important;font-size: 10px;}
@@ -16,8 +22,8 @@ label{font-weight: normal;font-size: 14px;display: block;}
 	padding-bottom: 20px;
 }
 [ng-cloak],[frontload]{display: none}
+[ng-click]{cursor: pointer}
 a.ti,a.glyphicon{text-decoration: none; cursor: pointer;}
-*:first-child{margin-top: 0}
 .modal-dialog{padding-top: 20px;}
 .breadcrumb{background-color: transparent;}
 .blocker{
@@ -68,4 +74,10 @@ form .table{
 .growl-item{
 	margin-bottom: 10px;
 	box-shadow: 1px 2px 3px -2px rgba(0,0,0,.5);
+}
+
+.project-title{
+	color: inherit;
+	font-size: 16px;
+	font-weight: bold;
 }
