--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,10 @@ label{font-weight: normal;font-size: 14px;display: block;}
 .icons{float: right;font-size: 16px;}
 .icons *{margin-left: 5px}
 .isoform-messages{margin-top: 5px;font-size: 14px}
+/*
 .navbar{background-color: #1c2b36 !important;}
-.navbar-brand{color:white !important; font-weight: bold;}
+.navbar-brand, .navbar a{color:white !important; font-weight: bold;}
+*/
 .pagination a{padding:4px 10px !important;font-size: 10px;}
 .pagination{margin-bottom: 0}
 .pagination .disabled{opacity: .5;}
