--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 *:first-child{margin-top: 0}
-body{background-color: #f3f3f3;color: #444;}
+body{background-color: #f3f3f3;color: #444; padding-bottom:40px;}
 table{width: 100%;vertical-align: top}
 label{font-weight: normal;font-size: 14px;display: block;}
 .text-muted{color:#aaa;}
