--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@ label{font-weight: normal;font-size: 14px;display: block;}
 .icons{float: right;font-size: 16px;}
 .icons *{margin-left: 5px}
 .isoform-messages{margin-top: 5px;font-size: 14px}
+.navbar{border-radius: 0}
 .navbar-toggle{margin-top: 8px;}
 .pagination a{padding:4px 10px !important;font-size: 10px;}
 .pagination{margin-bottom: 0}
